--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -36,11 +36,11 @@
 		
 		<h3>Contents</h3>
 			<ol>
-				<li><a href="#c">Causes</a></li>
-				<li><a href="#v">Victims</a></li>
-				<li><a href="#s">Symptoms</a></li>
-				<li><a href="#d&t">Diagnosis and Treatment</a></li>
-				<li><a href="#o">Outcome</a></li>
+				<li><a href="#causes">Causes</a></li>
+				<li><a href="#victims">Victims</a></li>
+				<li><a href="#symptoms">Symptoms</a></li>
+				<li><a href="#diagnosis-treatment">Diagnosis and Treatment</a></li>
+				<li><a href="#outcome">Outcome</a></li>
 			</ol>
 			
 		<h2>Basic Info</h2>
