--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -62,7 +62,7 @@
 		<img src="https://orthoinfo.aaos.org/link/4db87786689c4786a9c4c22a068d3703.aspx"
 			width="600"
 			height="400" />
-		<h2 id="s">Symptoms</h2>
+		<h2 id="symptoms">Symptoms</h2>
 		<p>The most common symptom of Sever's Disease is pain in the back of the heel, which can extend to the bottom and sides of the heel.</p>
 		<p><strong>Symptoms include:</strong></p>
 		<ul>
