--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -24,10 +24,10 @@
 			font-family: Verdana;
 		ul {
 			color: rgb(255, 0, 0);
-			font-family: Monospace;
+			font-family: Courier New;
 		}
 		p {
-			font-family: Monospace;
+			font-family: Courier New;
 		}
 		</style>
 	</head>
