--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -8,6 +8,7 @@
 		h1 {
 			color: rgb(0, 51, 153);
 			font-size: 55px;
+			text-align: center;
 			background-color: rgb(255, 255, 0);
 			font-family: Verdana;
 		}
