--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -5,30 +5,32 @@
 		<title>Sever's Disease</title>
 		<style>
 		
+		h1, h2, h3 {
+			font-family: sans-serif;
+		}
+		
 		h1 {
 			color: rgb(0, 51, 153);
 			font-size: 55px;
-			text-align: center;
 			background-color: rgb(255, 255, 0);
-			font-family: Verdana;
+			text-align: center;
 		}
 		
 		h2 {
 			color: rgb(0, 102, 204);
 			font-size: 40px;
-			font-family: Verdana;
 		}
 		
 		h3 {
 			color: rgb(0, 102, 204);
 			font-size: 30px;
-			font-family: Verdana;
 		ul {
 			color: rgb(255, 0, 0);
-			font-family: Courier New;
+			font-family: Monospace;
 		}
+		
 		p {
-			font-family: Courier New;
+			font-family: Monospace;
 		}
 		</style>
 	</head>
@@ -37,11 +39,11 @@
 		
 		<h3>Contents</h3>
 			<ol>
-				<li><a href="#causes">Causes</a></li>
-				<li><a href="#victims">Victims</a></li>
-				<li><a href="#symptoms">Symptoms</a></li>
-				<li><a href="#diagnosis-treatment">Diagnosis and Treatment</a></li>
-				<li><a href="#outcome">Outcome</a></li>
+				<li><a href="#c">Causes</a></li>
+				<li><a href="#v">Victims</a></li>
+				<li><a href="#s">Symptoms</a></li>
+				<li><a href="#d&t">Diagnosis and Treatment</a></li>
+				<li><a href="#o">Outcome</a></li>
 			</ol>
 			
 		<h2>Basic Info</h2>
@@ -49,7 +51,7 @@
 		<img src="https://www.childrenshospital.org/-/media/Centers-and-Services/Programs/F_N/Lower-Extremity-Program/severs-apophysitis-1750.ashx?h=581&w=801&la=en&hash=15759F513DFECA6F133BB73F8DA5CC7884187F31"
 			width="600"
 			height="450" />
-		<h2 id="causes">Causes</h2>
+		<h2 id="c">Causes</h2>
 		<p>The growth plate in the back of the heel is made of bone cartilage. The Achilles tendon connects the calf muscles to the growth plate, and because bones grow faster than muscle, especially in the foot, the Achilles tendon tightens at certain points in the physical development of a young kid.</p>
 		<p><strong>Activities that are most likely to cause this include:</strong></p>
 		<ul>
@@ -58,12 +60,12 @@
 			<li>overtraining of young athletes
 			<li>shoes that don't have adequate support
 		</ul>
-		<h2 id="victims">Victims</h2>
+		<h2 id="v">Victims</h2>
 		<p>Sever’s disease most often affects children during growth spurts. Sever’s disease is rare in older teens. By late adolescence, a child’s growth plates have hardened into solid bone, and their muscles and tendons have lengthened to match the growth of their bones. In boys, growth spurts happen when they’re between 10 and 15 years old. In girls, growth spurts typically occur between the ages of 8 and 13. Athletes who participate in high-impact sports are at higher risk of developing Sever’s disease. Less active kids can also be affected, though.</p>
 		<img src="https://orthoinfo.aaos.org/link/4db87786689c4786a9c4c22a068d3703.aspx"
 			width="600"
 			height="400" />
-		<h2 id="symptoms">Symptoms</h2>
+		<h2 id="s">Symptoms</h2>
 		<p>The most common symptom of Sever's Disease is pain in the back of the heel, which can extend to the bottom and sides of the heel.</p>
 		<p><strong>Symptoms include:</strong></p>
 		<ul>
@@ -76,7 +78,7 @@
 		<img src="https://orthoinfo.aaos.org/link/c8b726c34c4f4f42aafe16e6f1a18beb.aspx"
 			width="700"
 			height="350" />
-		<h2 id="diagnosis-treatment">Diagnosis and Treatment</h2>
+		<h2 id="d&t">Diagnosis and Treatment</h2>
 		<p>From the author's personal experience, diagnosis can come from a pediatrician (foot doctor) or a family doctor. Sever's Disease is usually easy to spot and diagnose. If you want to try to diagnose at home, you can squeeze your child's foot at different points to see where the pain is. Doctors will usually do this as well as x-rays and watching them walk, hop or jump to come up with a complete diagnosis.</p>
 		<p><strong>Treatments include:</strong></p>
 		<ul>
@@ -90,7 +92,7 @@
 		<img src="https://orthoinfo.aaos.org/link/a267694452f14cd8b985cc12216dfab6.aspx"
 			width="400"
 			height="500" />
-		<h2 id="outcome">Outcome</h2>
+		<h2 id="o">Outcome</h2>
 		<p>It is not unusual for Sever’s disease to reoccur. This typically happens when a child once again increases sports activities or does not do the proper treatment methods. Wearing shoes that provide good support to the foot and heel may help prevent recurrence. Sever’s disease will not return once a child is fully grown and the growth plate in the heel has completely transformed from cartilage into solid bone.</p>
 		<p><em>Sources:<br><a href="https://www.childrenshospital.org/conditions-and-treatments/conditions/s/severs-disease">Boston Children's Hospital<br>
 		<a href="https://health.clevelandclinic.org/has-heel-pain-sidelined-your-child-7-questions-on-severs-disease-answered/">Cleveland Clinic<br>
