--- a/SeversDisease.html
+++ b/SeversDisease.html
@@ -42,7 +42,7 @@
 				<li><a href="#c">Causes</a></li>
 				<li><a href="#v">Victims</a></li>
 				<li><a href="#s">Symptoms</a></li>
-				<li><a href="#d&t">Diagnosis and Treatment</a></li>
+				<li><a href="#d-t">Diagnosis and Treatment</a></li>
 				<li><a href="#o">Outcome</a></li>
 			</ol>
 			
@@ -78,7 +78,7 @@
 		<img src="https://orthoinfo.aaos.org/link/c8b726c34c4f4f42aafe16e6f1a18beb.aspx"
 			width="700"
 			height="350" />
-		<h2 id="d&t">Diagnosis and Treatment</h2>
+		<h2 id="d-t">Diagnosis and Treatment</h2>
 		<p>From the author's personal experience, diagnosis can come from a pediatrician (foot doctor) or a family doctor. Sever's Disease is usually easy to spot and diagnose. If you want to try to diagnose at home, you can squeeze your child's foot at different points to see where the pain is. Doctors will usually do this as well as x-rays and watching them walk, hop or jump to come up with a complete diagnosis.</p>
 		<p><strong>Treatments include:</strong></p>
 		<ul>
